# happypose

./: .git-blame-ignore-revs  .gitignore  README.md  build.py  environment.yml  pyproject.toml
happypose/pose_estimators/cosypose/: setup.py
happypose/pose_estimators/cosypose/cosypose/: config.py
happypose/pose_estimators/cosypose/cosypose/evaluation/: evaluation.py
happypose/pose_estimators/cosypose/cosypose/integrated/: detector.py  pose_estimator.py
happypose/pose_estimators/cosypose/cosypose/scripts/: run_inference_on_example.py
happypose/pose_estimators/cosypose/cosypose/utils/: cosypose_wrapper.py
happypose/pose_estimators/megapose/evaluation/: bop.py  prediction_runner.py
happypose/pose_estimators/megapose/evaluation/meters/: modelnet_meters.py
happypose/pose_estimators/megapose/inference/: pose_estimator.py
happypose/pose_estimators/megapose/scripts/: run_inference_on_datasettemp.py  run_inference_on_example_newdetections.py
happypose/pose_estimators/megapose/src/megapose/: config.py
happypose/pose_estimators/megapose/src/megapose/evaluation/: bop.py  data_utils.py  evaluation.py  evaluation_runner.py  prediction_runner.py  utils.py
happypose/pose_estimators/megapose/src/megapose/evaluation/meters/: lf_utils.py  modelnet_meters.py  utils.py
happypose/pose_estimators/megapose/src/megapose/inference/: detector.py  icp_refiner.py  pose_estimator.py  refiner_utils.py  teaserpp_refiner.py  types.py
happypose/pose_estimators/megapose/src/megapose/models/: pose_rigid.py  resnet.py  torchvision_resnet.py
happypose/pose_estimators/megapose/src/megapose/scripts/: download.py  generate_shapenet_pbr.py  make_shapenet_ply_scaled.py  make_shapenet_subsets.py  run_full_megapose_eval.py  run_inference_on_example.py  run_megapose_training.py
happypose/pose_estimators/megapose/src/megapose/training/: megapose_forward_loss.py  pose_models_cfg.py  train_megapose.py  utils.py
happypose/toolbox/datasets/: bop_object_datasets.py  bop_scene_dataset.py  datasets_cfg.py  gso_dataset.py  object_dataset.py  pose_dataset.py  scene_dataset.py  scene_dataset_wrappers.py  shapenet_object_dataset.py  web_scene_dataset.py
happypose/toolbox/inference/: utils.py
happypose/toolbox/lib3d/: rigid_mesh_database.py  rotations.py  transform.py  transform_ops.py
happypose/toolbox/renderer/: geometry.py  panda3d_batch_renderer.py  panda3d_scene_renderer.py  types.py
happypose/toolbox/utils/: conversion.py  distributed.py  logs_bokeh.py  tensor_collection.py
happypose/toolbox/visualization/: bokeh_plotter.py  meshcat_utils.py  utils.py
