[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
omit = ["cosypose", "megapose6d"]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["cosypose", "megapose6d"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pybullet"

[tool.poetry]
authors = ["Elliot Maître", "Yann Labbé"]
description = "Toolbox and trackers for object pose-estimation"
license = "BSD-2-Clause"
name = "happypose"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
panda3d = {optional = true, version = "=1.10.13"}
pin = "^2.6.17"
pybullet = {optional = true, version = "^3.2.5"}
python = ">=3.8,<3.12"
torch = "<2"
opencv-python-headless = "^4.7.0.72"
bokeh = "^3.1.0"
transforms3d = "^0.4.1"
webdataset = "^0.2.48"
omegaconf = "^2.3.0"
joblib = "^1.2.0"
tqdm = "^4.65.0"
imageio = "^2.27.0"
pypng = "^0.20220715.0"
scipy = "^1.10.1"
trimesh = "^3.21.5"
torchvision = "<0.15"
simplejson = "^3.19.1"
open3d = "^0.17.0"
scikit-learn = "^1.2.2"
addict = "^2.4.0"
roma = "^1.3.1"
seaborn = "^0.12.2"
selenium = "^4.8.3"


[tool.poetry.extras]
render = ["panda3d", "pybullet"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^7.2.2"}
ipython = "^8.12.0"
pre-commit = "^3.2.1"
ruff = "^0.0.260"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "^1.0.0"
sphinx = "^6.1.3"

[tool.poetry.urls]
changelog = "https://github.com/agimus-project/happypose/blob/main/CHANGELOG.md"

[tool.ruff]
extend-exclude = ["cosypose", "megapose6d"]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "D", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py38"

[tool.tomlsort]
all = true
